[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
jwt-simple = "0.11.5"
scrypt = "0.11.0"
serde = { version = "1.0.164", features=["derive"] }
serde_json = "1.0.96"
skytable = "0.7.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
